--- a/app/views/diary_entries/index.html.erb
+++ b/app/views/diary_entries/index.html.erb
@@ -108,6 +108,13 @@
         
         <p>
           <%= link_to "Read entry", diary_entry, class: "button is-link is-small mt-2" %>
+          <% if user_signed_in? %>
+            <%= link_to "Edit", edit_diary_entry_path(diary_entry), class: "button is-primary is-small mt-2 ml-1" %>
+            <%= link_to "Delete", diary_entry_path(diary_entry), 
+                method: :delete, 
+                class: "button is-danger is-small mt-2 ml-1",
+                data: { confirm: "Are you sure?" } %>
+          <% end %>
         </p>
       </div>
     </div>
