--- a/app/views/diary_entries/index.html.erb
+++ b/app/views/diary_entries/index.html.erb
@@ -84,7 +84,9 @@
         <h2 class="title is-5">
           <%= link_to diary_entry.title, diary_entry_path(diary_entry) %>
         </h2>
-        <p><em><%= diary_entry.entry_date.strftime("%A, %-d %B %Y") %></em></p>
+        <p class="has-text-info has-text-weight-semibold">
+          <em><%= diary_entry.entry_date.strftime("%A, %d %B %Y") %></em>
+        </p>
         <p><%= truncate(diary_entry.content.body.to_plain_text, length: 100) %></p>
         
         <% if diary_entry.images.attached? %>
@@ -111,9 +113,11 @@
           <% if user_signed_in? %>
             <%= link_to "Edit", edit_diary_entry_path(diary_entry), class: "button is-primary is-small mt-2 ml-1" %>
             <%= link_to "Delete", diary_entry_path(diary_entry), 
-                method: :delete, 
                 class: "button is-danger is-small mt-2 ml-1",
-                data: { confirm: "Are you sure?" } %>
+                data: { 
+                  turbo_method: :delete,
+                  turbo_confirm: "Are you sure you want to delete this diary entry?" 
+                } %>
           <% end %>
         </p>
       </div>
