--- a/app/views/diary_entries/show.html.erb
+++ b/app/views/diary_entries/show.html.erb
@@ -80,10 +80,10 @@
     </div>
     <div class="control">
       <%= link_to "Delete Entry", diary_entry_path(@diary_entry), 
-          method: :delete, 
           class: "button is-danger is-medium",
           data: { 
-            confirm: "Are you sure you want to delete this diary entry? This action cannot be undone." 
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure you want to delete this diary entry? This action cannot be undone." 
           } %>
     </div>
   <% else %>
