--- a/app/views/diary_entries/_form.html.erb
+++ b/app/views/diary_entries/_form.html.erb
@@ -40,19 +40,35 @@
       <div class="columns is-multiline is-mobile">
         <% @diary_entry.images.each_with_index do |image, index| %>
           <div class="column is-one-quarter-desktop is-one-third-tablet is-half-mobile">
-            <div class="card">
+            <div class="card" style="position: relative;">
               <div class="card-image">
                 <figure class="image is-square">
                   <%= image_tag url_for(image), 
                       alt: "Photo #{index + 1}",
                       style: "width: 100%; height: 150px; object-fit: cover;" %>
                 </figure>
+                
+                <!-- Delete button for current images -->
+                <div style="position: absolute; top: 8px; right: 8px;">
+                  <%= link_to remove_image_diary_entry_path(@diary_entry, image_id: image.id), 
+                      method: :delete,
+                      data: { 
+                        turbo_method: :delete,
+                        turbo_confirm: "Are you sure you want to delete this image? This action cannot be undone." 
+                      },
+                      class: "button is-danger is-small is-rounded",
+                      style: "opacity: 0.9; box-shadow: 0 2px 4px rgba(0,0,0,0.3);" do %>
+                    <span class="icon is-small">
+                      <i class="fas fa-trash"></i>
+                    </span>
+                  <% end %>
+                </div>
               </div>
             </div>
           </div>
         <% end %>
       </div>
-      <p class="help has-text-info">Current photos attached to this entry. Upload new photos below to add more.</p>
+      <p class="help has-text-info">Current photos attached to this entry. Click the red trash icon to delete individual photos, or upload new photos below to add more.</p>
     </div>
   <% end %>
 
